chore: fix packages, run dev compile errors

--- a/apps/api-gateway/Dockerfile
+++ b/apps/api-gateway/Dockerfile
@@ -1,28 +1,53 @@
 # Use the official Node.js 18 image
 # https://hub.docker.com/_/node
-FROM node:18-alpine
+FROM node:18-alpine AS builder
 
 # Set the working directory
 WORKDIR /usr/src/app
 
-# Copy root package files
+# Install build dependencies
+RUN apk add --no-cache python3 make g++
+
+# Copy package files
 COPY package*.json ./
+COPY tsconfig.json ./
 COPY apps/api-gateway/package*.json ./apps/api-gateway/
-COPY packages/shared/package*.json ./packages/shared/
 COPY packages/auth/package*.json ./packages/auth/
+COPY packages/database/package*.json ./packages/database/
+COPY packages/shared/package*.json ./packages/shared/
 COPY packages/types/package*.json ./packages/types/
+COPY packages/utils/package*.json ./packages/utils/
 
 # Install all dependencies
-RUN npm ci
+RUN npm ci --legacy-peer-deps
 
-# Copy the rest of the application
+# Copy source code
 COPY . .
 
 # Build the application
-RUN npm run build --workspace=api-gateway
-RUN npm run build --workspace=packages/shared
-RUN npm run build --workspace=packages/auth
-RUN npm run build --workspace=packages/types
+RUN npm run build
+
+# Production stage
+FROM node:18-alpine
+
+# Create app directory
+WORKDIR /usr/src/app
+
+# Copy package files
+COPY package*.json ./
+COPY apps/api-gateway/package*.json ./apps/api-gateway/
+COPY packages/auth/package*.json ./packages/auth/
+COPY packages/database/package*.json ./packages/database/
+COPY packages/shared/package*.json ./packages/shared/
+COPY packages/types/package*.json ./packages/types/
+COPY packages/utils/package*.json ./packages/utils/
+
+# Install only production dependencies
+RUN npm ci --legacy-peer-deps --only=production
+
+# Copy built application from the builder stage
+COPY --from=builder /usr/src/app/apps ./apps
+COPY --from=builder /usr/src/app/packages ./packages
 
 # Expose the port the app runs on
 EXPOSE 8080
