--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -16,7 +16,7 @@
     "@types/express": "^4.17.17",
     "cors": "^2.8.5",
     "helmet": "^7.0.0",
-    "http-proxy-middleware": "^2.0.6",
+    "http-proxy-middleware": "1.3.1",
     "axios": "^1.4.0",
     "jsonwebtoken": "^9.0.1",
     "@ai-job-applier/shared": "file:../../packages/shared",
