feat: Add Docker support for frontend and fix API communication

--- a/apps/api-gateway/Dockerfile
+++ b/apps/api-gateway/Dockerfile
@@ -25,7 +25,7 @@ RUN npm install --legacy-peer-deps
 COPY . .
 
 # Build the application
-RUN npm run build
+RUN npm run build --workspace=api-gateway
 
 # Production stage
 FROM node:18-alpine
