--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -5,30 +5,35 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc"
   },
-  "keywords": ["api", "gateway", "microservice", "routing"],
+  "keywords": [
+    "api",
+    "gateway",
+    "microservice",
+    "routing"
+  ],
   "author": "AI Job Applier Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "@types/express": "^4.17.17",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "http-proxy-middleware": "1.3.1",
-    "axios": "^1.4.0",
-    "jsonwebtoken": "^9.0.1",
+    "@ai-job-applier/auth": "file:../../packages/auth",
     "@ai-job-applier/shared": "file:../../packages/shared",
     "@ai-job-applier/types": "file:../../packages/types",
-    "@ai-job-applier/auth": "file:../../packages/auth"
+    "@types/express": "^4.17.17",
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "http-proxy-middleware": "^3.0.5",
+    "jsonwebtoken": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.4.5",
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.13",
     "@types/http-proxy-middleware": "^1.0.0",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/axios": "^0.14.0",
+    "@types/node": "^20.4.5",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
