--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -5,42 +5,48 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
-  "keywords": ["authentication", "jwt", "oauth", "microservice"],
+  "keywords": [
+    "authentication",
+    "jwt",
+    "oauth",
+    "microservice"
+  ],
   "author": "AI Job Applier Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "@types/express": "^4.17.17",
-    "mongoose": "^7.4.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "joi": "^17.9.2",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.1",
+    "@ai-job-applier/auth": "file:../../packages/auth",
     "@ai-job-applier/database": "file:../../packages/database",
     "@ai-job-applier/shared": "file:../../packages/shared",
     "@ai-job-applier/types": "file:../../packages/types",
     "@ai-job-applier/utils": "file:../../packages/utils",
-    "@ai-job-applier/auth": "file:../../packages/auth"
+    "@types/express": "^4.17.17",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.1"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
-    "@types/node": "^20.4.5",
     "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/cors": "^2.8.13",
+    "@types/jest": "^29.5.3",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.4.5",
+    "@types/supertest": "^6.0.3",
     "jest": "^29.6.2",
-    "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3",
+    "mongodb-memory-server": "^8.13.0",
     "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "mongodb-memory-server": "^8.13.0"
+    "typescript": "^5.2.2"
   }
 }
